# DSAN5400_final_project

./: .gitattributes  README.md  embed_data.py  environment.yml  run_analysis.py  run_topic_modeling.py  testing_dataset_size.ipynb
EDA/: toneanalysis.ipynb  topic_modeling_eda.ipynb  v2tone.ipynb
analysis/: tone_utils.py
data/: all_elections_sentiment_comparison.csv  election_2016_sentiment_stats.csv  election_2020_sentiment_stats.csv  election_2024_sentiment_stats.csv  tone_by_month.csv  tone_by_week.csv  tone_by_year.csv
data/events/: US_Social_Political_Events_2015_2025.csv
data/topic_modeling/: abc_headline_topics.csv  abc_headline_topics_improved.csv  abc_headline_topics_sklearn.csv  all_sources_headline_topics.csv  all_sources_headline_topics_improved.csv  all_sources_headline_topics_sklearn.csv  all_sources_v2themes_topics.csv  fox_headline_topics.csv  fox_headline_topics_improved.csv  fox_headline_topics_sklearn.csv  fox_v2themes_topics.csv  msnbc_headline_topics.csv  msnbc_headline_topics_improved.csv  msnbc_headline_topics_sklearn.csv  msnbc_v2themes_topics.csv
kristin_eda/: election.py  election_sentiment.py  elections.py  events_tone_analysis.html  events_tone_analysis.qmd  kristin5.qmd  kristin6.qmd  kristin_2.qmd  kristin_3.qmd  kristin_4.qmd  overall_tone_analysis.html  overall_tone_analysis.qmd  overall_tone_analysis.quarto_ipynb  test.qmd  tone_comparison_analysis.html  tone_comparison_analysis.qmd
michael_eda/: eda.html  eda.ipynb  eda.qmd
nlp_analysis/: pyproject.toml
nlp_analysis/results/topic_modeling/: abc_headline_topics.csv  abc_v2themes_topics.csv  all_sources_headline_topics.csv
nlp_analysis/src/nlp_analysis/: half_life.py  run_topic_modeling.py  run_topic_modeling.sh  topic_modeling.py
nlp_analysis/tests/: half_life_test.py
ria/: half_life_modeling.py
ria_eda/: msnbc.qmd
website/: _quarto.yml  index.qmd  indextry.html  page-1.qmd  page-1.quarto_ipynb  page-2.qmd  page-2.quarto_ipynb  page-4.qmd
website/_site/: about.html  index.html  page-1.html  page-2.html  page-3.html  page-4.html  search.json
website/_site/data/: tone_data.js
website/_site/scripts/: calendar.js  calendar_embedded.js  (+4 more)
website/data/: media_topics.json  tone_data.json
website/scripts/: calendar.js  preprocess_data.py  tone_avg_prep.ipynb  v2tone_averages.ipynb
website/styles/: custom.scss
(+6 files in other folders)
