[project]
name = "nlp-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Viviana Luccioli",email = "vcl16@georgetown.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "nlp_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
